<resources>
    <string name="app_name">ZahFit Fitness</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">ZahFit Fitness</string>
    <string name="title_desc">Your journey of fitness and health starts here!</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="email_hint">abcde@zahfit.com</string>
    <string name="name_label">Name</string>
    <string name="name_hint">John Doe</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
...
    <string name="weight_hint">59</string>
    <string name="weight_label">Weight</string>
    <string name="username_label">Username</string>
    <string name="username_hint">JohnDoe123, JohnDoe, John_Doe</string>
    <string name="age_hint">22</string>
    <string name="title_activity_user_main">UserMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="workout_beginner">Beginner</string>
...
